fix: open send tx drawer from popup, fix tx buttons alignment

--- a/apps/browser-extension-wallet/src/views/browser-view/components/Layout/SectionLayout.modules.scss
+++ b/apps/browser-extension-wallet/src/views/browser-view/components/Layout/SectionLayout.modules.scss
@@ -104,7 +104,7 @@ $aside-width-large: 420px;
   position: absolute;
   right: 0;
   // Large value to fit both send and receive buttons, plus dropdown trigger
-  width: 500px;
+  width: 650px;
 }
 
 .sidePanelContentBox {
