--- a/packages/core/src/ui/components/TransactionCTAs/TransactionCTAs.module.scss
+++ b/packages/core/src/ui/components/TransactionCTAs/TransactionCTAs.module.scss
@@ -9,6 +9,7 @@
 .buttonsContainer {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   gap: size_unit(2);
   flex: 1;
 
